# CapacitorCalculations

./: CapacitorCalculations.sln  MonteCarloC.sln  README.md
CapacitorCalculations/: CapacitorCalculations.vcxproj  CapacitorCalculations.vcxproj.filters  README.md  functions.h  module.cpp  pyproject.toml  setup.py
CapacitorCalculations/dielepy.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
CapacitorCalculations/idcappy.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
CapacitorCalculations/x64/Release/: CapacitorCalculations.iobj  CapacitorCalculations.ipdb  CapacitorCalculations.pyd.recipe
CapacitorCalculations/x64/Release/Capacito.78043332.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CapacitorCalculations.lastbuildstate  CapacitorCalculations.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
x64/Release/: CapacitorCalculations.exp  CapacitorCalculations.lib  CapacitorCalculations.pyd
