[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "idcappy"
version = "1.2"
description = "Provides functions for effecient calculations for interdigitial capacitors. Documentation can be found on the github https://github.com/teddy-tort/CapacitorCalculations/blob/cf940bc84ab8a6deb9a0718a328eb9fe2d3f6642/README.md"
authors = [{ name = "Teddy Tortorici", email = "etc.tortorici@gmail.com" }]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
	"Programming Language :: Python",
	"Programming Language :: Python :: 3",
]
keywords = ["dielectric", "capacitor", "interdigital"]

[project.urls]
Homepage = "https://github.com/teddy-tort/capacitorcalculations"